--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name bllng.com;
+    server_name g4m4.com;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,16 +14,16 @@ server {
 
 server {
     listen 443 ssl;
-    server_name bllng.com;
+    server_name g4m4.com;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/bllng.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bllng.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/g4m4.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/g4m4.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://bllng.com;
+        proxy_pass  http://g4m4.com;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
